--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.bafalconcustomclimatecontrol"
+        applicationId "com.liamgooch.bafalconcustomclimatecontrol"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
